--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Theme.MovieApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.MovieApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
+		<item name="colorPrimary">@color/navy</item>
+		<item name="colorPrimaryVariant">@color/navy</item>
 		<item name="colorOnPrimary">@color/white</item>
 		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_700</item>
+		<item name="colorSecondary">@color/yellow</item>
+		<item name="colorSecondaryVariant">@color/yellow</item>
 		<item name="colorOnSecondary">@color/black</item>
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 		<!-- Customize your theme here. -->
+		<item name="android:windowBackground">@color/navy</item>
+	</style>
+	
+	<style name="inputTextLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+		<item name="boxBackgroundColor">@color/light_navy</item>
+		<item name="hintTextColor">@color/silver</item>
+		<item name="android:textColorHint">@color/silver</item>
+		<item name="startIconTint">@color/silver</item>
+	</style>
+	
+	<style name="light_textView" parent="Widget.AppCompat.TextView">
+		
+		<item name="android:textSize">16sp</item>
+		<item name="fontFamily">sans-serif-light</item>
+		<item name="android:textColor">@color/silver</item>
+		
 	</style>
 </resources>
