--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,8 @@
 	<color name="white">#FFFFFFFF</color>
 	
 	<color name="silver">#F1F6F9</color>
-	<color name="navy">#14274E</color>
-	<color name="light_navy">#394867</color>
+	<color name="navy">#121825</color>
+	<color name="light_navy">#1E283C</color>
 	<color name="gray">#9BA4B4</color>
 	<color name="yellow">#FFE194</color>
 	<color name="red">#B31312</color>
