--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,7 @@
 		<item name="android:textSize">16sp</item>
 		<item name="fontFamily">sans-serif-light</item>
 		<item name="android:textColor">@color/silver</item>
+<!--		<item name="android:textAlignment">center</item>-->
 		
 	</style>
 </resources>
