--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,26 @@
 	<fragment
 		android:id="@+id/fragmentContainerView"
 		android:name="androidx.navigation.fragment.NavHostFragment"
-		android:layout_width="409dp"
-		android:layout_height="729dp"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginBottom="?actionBarSize"
 		app:defaultNavHost="true"
-		app:navGraph="@navigation/navigation"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintBottom_toTopOf="@id/bottom_nav"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:navGraph="@navigation/navigation" />
 	
-	
+	<com.google.android.material.bottomnavigation.BottomNavigationView
+		android:id="@+id/bottom_nav"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="@color/light_navy"
+		app:itemIconTint="@color/selector_botton_nav"
+		app:labelVisibilityMode="unlabeled"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:menu="@menu/menu" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
