--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout
+	
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 	
 	<data>
 		
@@ -9,12 +13,10 @@
 	
 	</data>
 	
-	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:app="http://schemas.android.com/apk/res-auto"
-		xmlns:tools="http://schemas.android.com/tools"
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:padding="6dp">
+		android:layout_marginVertical="6dp">
 		
 		<!--  Image Card	-->
 		<com.google.android.material.card.MaterialCardView
@@ -50,10 +52,10 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
+				android:maxLines="2"
 				android:text="@{movie.title}"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				android:maxLines="2"/>
+				app:layout_constraintTop_toTopOf="parent" />
 			
 			<TextView
 				android:id="@+id/movie_rate"
@@ -75,10 +77,10 @@
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
 				android:drawablePadding="4dp"
+				android:maxLines="2"
 				android:text="@{movie.country}"
 				app:drawableStartCompat="@drawable/ic_baseline_language_24"
 				app:drawableTint="@color/silver"
-				android:maxLines="2"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/movie_rate" />
 			
