--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -27,5 +27,10 @@
 	<action
 		android:id="@+id/action_homeFragment"
 		app:destination="@id/homeFragment" />
-	
+	<fragment
+		android:id="@+id/searchFragment"
+		android:name="com.example.movieapp.ui.fragments.search.SearchFragment"
+		android:label="fragment_search"
+		tools:layout="@layout/fragment_search" />
+
 </navigation>
