--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,5 +3,6 @@
 	
 	<item android:id="@+id/homeFragment" android:icon="@drawable/baseline_home_24" android:title="Home"/>
 	<item android:id="@+id/searchFragment" android:icon="@drawable/baseline_search_24" android:title="Search"/>
+	<item android:id="@+id/favoriteFragment" android:icon="@drawable/baseline_favorite_24" android:title="Fav"/>
 
 </menu>
