--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -44,5 +44,10 @@
 	<action
 		android:id="@+id/action_detailFragment"
 		app:destination="@id/detailFragment" />
+	<fragment
+		android:id="@+id/favoriteFragment"
+		android:name="com.example.movieapp.ui.fragments.favorite.FavoriteFragment"
+		android:label="fragment_favorite"
+		tools:layout="@layout/fragment_favorite" />
 
 </navigation>
